# atrox

./: AGENTS.md  CLAUDE.md  Comandos.md  README.md
.Github/: CODEOWNERS
.Github/workflows/: backend-ci.yml
.atl/: .skill-registry.cache.json  skill-registry.md
aetherpentest/: README.md  __init__.py  main.py  requirements.txt  version.py
aetherpentest/backend/: api.py  schemas.py
aetherpentest/cli/: cli.py
aetherpentest/config/: settings.yaml
aetherpentest/core/: agent.py  config.py  database.py  orchestrator.py  reporter.py
aetherpentest/data/: aetherpentest.db
aetherpentest/frontend/: index.html  package-lock.json  package.json
aetherpentest/modules/: enumeration.py  (+4 more)
docs/: SRS.md
src/Backend/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  scheduler.js
src/Backend/atrox/: __init__.py  __main__.py  config.py  main.py
src/Backend/atrox/api/: discovery.py  health.py  jobs.py  vulnscan.py
src/Backend/atrox/queue/: __init__.py  models.py  service.py
src/Backend/atrox/scanner/: __init__.py  models.py  nmap_wrapper.py  nuclei_wrapper.py  validators.py
src/Backend/data/: sync-log.json
src/Backend/services/: nvdService.js
src/Backend/tests/: test_discovery_api.py  test_health.py  test_job_queue.py  test_jobs_api.py  test_nmap_integration.py  test_nmap_wrapper.py  test_nuclei_integration.py  test_nuclei_wrapper.py  test_parse_extraction.py  test_queue_config.py  test_queue_models.py  test_vulnscan_api.py
src/Backend/tests/fixtures/: nmap_samples.py  nuclei_samples.py
(+63 files in other folders)
