[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atrox-backend"
version = "0.1.0"
description = "Core API del framework Atrox — pentesting automatizado con IA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[project.scripts]
atrox-api = "atrox.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atrox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
